<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacek.handycalc.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_simpleC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_simple_label"/>

        <Button
            android:id="@+id/button_enhancedC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_enhanced_label"/>

        <Button
            android:id="@+id/button_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_about_label"/>

        <Button
            android:id="@+id/button_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_exit_label"/>
    </LinearLayout>

</FrameLayout>
